--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -351,7 +351,12 @@ video {
 #front-body{
     text-align:justify;
     min-width: 300px;
-    max-width: 1500px;
+    max-width: 1000px;
+}
+
+#front-image{
+    width:100%;
+    min-width:500px;
 }
 
 .graph_legend{
