--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -339,12 +339,14 @@ video {
 
 .graph {
     width: 90%;
+    min-width:800px;
     height: 1000px;
     border: 1px solid lightgray;
 }
 .small_graph {
     diplay: inline-block;
     width: 90%;
+    min-width:800px;
     border: 1px solid lightgray;
 }
 
